# executorch-ggml

./: .gitignore  .gitmodules  BUILD_AND_RUN.sh  CMakeLists.txt  GRAPH_REBUILD.md  IDENTITY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MOBILENETV2_SUPPORT.md  Makefile  PROGRESS.md  QUICKSTART.md  README.md  SOUL.md  TOOLS.md  USER.md  build_pybind.sh  export_needle_ggml.py  export_parakeet_ggml.py  export_voxtral_ggml.py  plan.md  pyproject.toml  requirements-nightly.txt  setup.py
benchmark/: CMakeLists.txt  benchmark_llm.cpp  benchmark_needle.cpp  benchmark_parakeet.cpp  benchmark_voxtral.cpp
docs/: benchmark-results.csv  bf16_cast_pass.md  build_graph_architecture.md  ctx_size_estimation.md  cuda-benchmark.md  cuda-host-data-accessor.md  cuda-parakeet-debugging.md  cuda-performance-optimizations.md  custom-sdpa-kernel.md  eager-to-graph-migration.md  gguf-integration.md  gguf-pte-pipeline.md  kv-cache-qwen3-issue.md  kv-cache-strategies.md  metal-benchmark.md  metal-correctness-issue.md  qwen35moe-perf.md  two-graph-issues.md  voxtral-streaming.md  voxtral_cuda_perf.csv  voxtral_realtime_progress.md
examples/: gguf_pipeline_demo.py
memory/: 2026-01-28.md  2026-03-06.md
python/executorch_ggml/: __init__.py  _ggml_backend_pybind.cpp  bn_folding.py  dump_ir.py  edge_pipeline.py  export_gguf.py  gated_delta_net_op.py  ggml_backend.py  ggml_partitioner.py  gguf_analyzer.py  gguf_module.py  quantize.py  rope_module.py  rope_op.py  serialize.py  ssm_conv_op.py  utils.py  weight_mapping.py
python/executorch_ggml/ggml_ir/: GgmlGraph.py  OpCode.py  Tensor.py  TensorType.py
python/executorch_ggml/models/: needle.py  qwen3_5_moe.py
python/executorch_ggml/modules/: rms_norm.py  rope.py  voxtral_attention.py  voxtral_conv.py  voxtral_decoder_rope.py
python/executorch_ggml/ops/: __init__.py  _cond.py  _context.py  _helpers.py  _registry.py  _sym_expr.py  activation.py  arithmetic.py  comparison.py  convolution.py  indexing.py  linalg.py  misc.py  moe_ops.py  normalization.py  shape.py  special.py  tensor_creation.py
python/executorch_ggml/passes/: __init__.py  bf16_cast_pass.py  bn_folding_pass.py  bn_folding_rewrite_pass.py  broadcast_pass.py  cse_pass.py  fold_decoder_rms_norm_weights.py  fold_encoder_rms_norm_weights.py  fold_rms_norm_weights.py  fuse_moe_pass.py  fuse_projections.py  fuse_rope_pass.py  replace_copy_ops_pass.py  rope_5d_decompose_pass.py  strip_gqa_expand_pass.py  strip_identity_ops_pass.py
runner/: CMakeLists.txt  benchmark.py  compare_llama_cpp.py  export_parakeet.py  export_parakeet_q8.py  export_qwen3_q8.py  export_voxtral_rt.py  main.cpp  pal_init.cpp  run_parakeet.py  run_parakeet_q8.py  run_qwen3.py  run_qwen3_q8.py  run_voxtral_rt.py
runner/parakeet/: CMakeLists.txt  main.cpp
runtime/: CMakeLists.txt  fused_kernels.cu  ggml_backend.cpp  ggml_backend.h  ggml_ir_generated.h  gguf_data_map.h
runtime/ops/: build_context.h  custom_ops.h  data_structures.h  helpers.h  host_data_accessor.h  ops_activation.h  ops_arithmetic.h  ops_comparison.h  ops_cond.h  ops_convolution.h  ops_creation.h  ops_indexing.h  ops_linalg.h  ops_moe.h  ops_normalization.h  ops_shape.h  ops_special.h  profiling.h  sym_expr.h
schema/: ggml_ir.fbs  ggml_ir_generated.h
tests/: analyze_encoder_error.py  debug_decode_lockstep.py  debug_decoder.py  debug_joint.py  debug_partition.py  diagnose_parakeet.py  dump_decoder_signature.py  dump_encoder_graph.py  export_f32.py  profile_parakeet.py  profile_voxtral_decoder.py  profile_voxtral_encoder.py  test_bn_folding.py  test_bn_folding_pass.py  test_bn_folding_rewrite_pass.py  test_cond_export_shape.py  test_cond_partition.py  test_cond_preprocess.py  test_cond_runtime.py  test_conv_ops.py  test_dynamic_shapes.py  test_eager_decoder.py  test_encoder_layers.py  test_encoder_prefix_scan.py  test_france.py  test_gguf_pipeline.py  test_index_multi.py  test_kv_cache.py  test_linear_leaky_relu.py  test_mask_ops.py  test_masks.py  test_mobilenetv2_ops.py  test_multi_token_generation.py  test_mv2.py  test_mv2_op_inventory.py  test_mv2_partial_forward.py  test_needle_ggml_e2e.py  test_needle_numerics.py  test_ops.py  test_parakeet_ops.py  (+14 more)
